# riscv-os-rust

./: Cargo.toml  Makefile  README.md  TASKS.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/arch/: Cargo.toml
crates/arch/src/: lib.rs
crates/sbi/: Cargo.toml
crates/sbi/src/: lib.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: boot.rs  console.rs  entry.S  lib.rs  main.rs  memory.rs  platform.rs
scripts/: qemu-virt
