[workspace]
resolver = "2"
members = [
    "crates/arch",
    "crates/sbi",
    "kernel",
]

[workspace.package]
edition = "2024"
publish = false
rust-version = "1.95.0"

[workspace.dependencies]
fdt = { version = "=0.1.5", default-features = false }
riscvrust-arch = { path = "crates/arch" }
riscvrust-sbi = { path = "crates/sbi" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
panic = "abort"
