[package]
name = "riscvrust-kernel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
fdt.workspace = true
riscvrust-arch.workspace = true
riscvrust-sbi.workspace = true

[[bin]]
name = "riscvrust-kernel"
path = "src/main.rs"
test = false
bench = false
